--- a/www/index.css
+++ b/www/index.css
@@ -1,26 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Patua+One');
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
-
-@media only screen and (max-width: 820px) {
-    .body { width:89%; padding-left:5%; padding-bottom: 10px; }
-    .title { padding-left:5%; }
-    .link { padding-left:5%; }
-    .bottom { display: none; }
-    .bodytitle { padding-left:5%; padding-top:20px; }
-    .bar2 { padding-top:38px; padding-bottom:38px; }
-}
-
-@media only screen and (min-width: 820px) {
-    .body { width:55%; padding-left:23%; padding-right:22%; padding-bottom: 50px; }
-    .title { padding-left:2.5% }
-    .bodytitle { padding-left:23%; padding-top:60px; }
-    .link { position: absolute; right: 3.5%; }
-    .bottom { position: absolute; right: 3.5%; }
-    .rwd-break { display: none; }
-    .bar2 { padding-top:28px; padding-bottom:28px; }
-}
-
 .body {
     font-family: 'Roboto', 'Arial', sans-serif;
     line-height: 1.5em;
@@ -33,6 +13,9 @@
     color: white;
     font-size: 21px;
     font-weight: bold;
+    padding: 0px 12px;
+    text-align: top;
+    float: left;
 }
 
 .link {
@@ -100,3 +83,66 @@ transition:         color 0.25s;
 .hangingindent { padding-left: 22px; text-indent: -8px; line-height: 110%; margin-bottom: 5px; }
 
 sup { vertical-align: super; font-size: 75%; }
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+  
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 6px 12px;
+  text-decoration: none;
+  font-size: 14px;
+  background-color: #333;
+  overflow: hidden;
+  font-family: 'Roboto', 'Arial', sans-serif;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 1050px) {
+    .topnav a{display: none;}
+    .topnav a.icon {
+      float: right;
+      display: block
+    }
+    .body { width:89%; padding-left:5%; padding-bottom: 10px; }
+    .title { padding-left:5%; }
+    .link { padding-left:5%; }
+    .bottom { position: relative; float: right; padding-right: 3.5%; }
+    .bodytitle { padding-left:5%; padding-top:20px; }
+    .bar2 { padding-top:28px; padding-bottom:28px; }
+    .rwd-break { display: none; }
+
+  .topnav.responsive .icon {
+    position: relative;
+    float: right;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
+@media only screen and (min-width: 1050px) {
+    .rwd-break { display: block; }
+    .body { width:55%; padding-left:23%; padding-right:22%; padding-bottom: 50px; }
+    .bodytitle { padding-left:23%; padding-top:60px; }
+    .bottom { position: absolute; right: 3.5%; }
+    .bar2 { padding-top:28px; padding-bottom:28px; }
+}
+
